[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyzhihu-cli"
version = "0.1.0"
description = "知乎命令行工具 — 在终端搜索问题、查看回答、浏览热榜，支持二维码登录与Cookie登录"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "BAIGUANGMEI" }]
keywords = ["zhihu", "cli", "知乎"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
    "qrcode>=7.4",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/BAIGUANGMEI/zhihu-cli"
Repository = "https://github.com/BAIGUANGMEI/zhihu-cli"

[project.scripts]
zhihu = "zhihu_cli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires valid login session",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
